[gd_scene load_steps=10 format=2]

[ext_resource path="res://Gui/DialogDisplay.gd" type="Script" id=1]
[ext_resource path="res://Art/Gui/NineSLice.png" type="Texture" id=2]
[ext_resource path="res://fonts/OrangeKid14.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Theme" id=6]
default_font = ExtResource( 3 )

[node name="DialogDisplay" type="NinePatchRect"]
margin_right = 208.0
margin_bottom = 34.0
texture = ExtResource( 2 )
region_rect = Rect2( 72, 0, 36, 36 )
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.996078, 0.811765, 1 )
text = "Test Text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
